# arm_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
QT/: user_interface.py
config/: aruco_values.txt
launch/: control.launch  user_interface.launch
scripts/: OLD_collision_interface.py  UI_gara.py  collision_interface.py  control_py  fake_controller.py  gripper_controller.py  solve_equation.py
src/: ERC.cpp  bridge.cpp  library.h
srv/: GripperCommand.srv
